[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuemap"
version = "0.2.1"
description = "Redis for AI Agents - High-performance temporal-associative memory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai", "memory", "agents", "redis", "temporal", "associative", "llm", "rag"]
authors = [
    {name = "CueMap Team", email = "hello@cuemap.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/cuemap-dev/cuemap"
Documentation = "https://github.com/cuemap-dev/cuemap#readme"
Repository = "https://github.com/cuemap-dev/cuemap"
Issues = "https://github.com/cuemap-dev/cuemap/issues"
Docker = "https://hub.docker.com/r/cuemap/engine"
